[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Coins/Magnet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Magnet/Magnet3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Magnet/Magnet4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Magnet/Magnet5.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/magnet.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MagnetSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="tirori" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="tirori" to="." method="_on_tirori_finished"]
